styled left nav bar fully

--- a/main/frontend/index.html
+++ b/main/frontend/index.html
@@ -19,7 +19,7 @@
 		/>
 		<title>Trello</title>
 	</head>
-	<body>
+	<body class="dark">
 		<div id="root"></div>
 		<script type="module" src="./src/main.jsx"></script>
 	</body>
